尝试修复错位

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <div>
                 <fieldset>
                   <legend>其他</legend>
-                  <label>真·实验室开放(能否进行真和平结局)</label> <input id="sav-exitedtruelab" type="checkbox" />
-                  <label>打败了小羊(Asriel)(完成真和平结局) </label> <input id="sav-defeatedasriel" type="checkbox" />
+                  <label>真·实验室开放</label> <input id="sav-exitedtruelab" type="checkbox" />
+                  <label>打败了小羊(Asriel)(真和平结局) </label> <input id="sav-defeatedasriel" type="checkbox" />
                   <label>Plot 值</label> <select id="sav-plotvalue"> </select>
                   <label>FUN 值</label> <input type="text" id="sav-fun" />
                 </fieldset>
