translate help.html

--- a/help.html
+++ b/help.html
@@ -5,61 +5,57 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+      <br>
+      <div class="page-container">
 		<p>你好！这个页面还在翻译中，你可以过一会再来看，或者帮助我们进行翻译！</p>
         <h1>帮助</h1>
         <h2>使用外部工具</h2>
         如果你希望暂时尝试存档,
         你可以使用这个第三方工具 <a href="https://github.com/LEGOlord208/UndertaleSandbox">UndertaleSandbox</a>.
-        注意，我们和它们毫无关系。
-        
-        If you wish to learn the manual way of installing, carry on with the tutorial!
-        <h2> Getting Started </h2>
+        注意，我们和它们毫无关系。<br>
+        如果你想手动修改存档，请继续学习本教程！
+        <h2>开始上手</h2>
         <p>
-            First, you must find your Undertale save folder.
+            首先，你必须找到你 Undertale 的存档文件。
         </p>
         <p>
-            This is usually <code>C:/users/YourUsername/Local Settings/Application Data/UNDERTALE</code>,
-            but it might be different for you, who knows.
+            这通常在 <code>C:/users/你的用户名/AppData/local/UNDERTALE</code> 目录下,
+           但也可能会有不同，谁知道呢？
         </p>
         <p>
-            It should contain at least a file called <code>undertale.ini</code>
-            and a file called <code>file0</code>, unless you haven't saved your game yet, or the
-            save was deleted.
+            这个目录下通常至少会有一个叫 <code>undertale.ini</code> 的文件
+            和一个叫做 <code>file0</code> 的文件。如果没有，可能是因为你从来没有保存你的游戏, 或者存档被删除了。
         </p>
-        <h2> Loading </h2>
+        <h2>加载</h2>
         <p>
-            Once you have found where your existing save data is, you can load it into
-            Flowey's time machine to edit it.
+            一旦你找到了你存档文件的位置, 你可以在小花的时间机器里加载和编辑它。
         </p>
         <p>
-            You don't have to load an existing save though, you can select a preset instead at the top,
-            or use the default preset which is set by default.
+            或许你不需要直接加载/编辑一个已存在的存档文件, 你可以直接在顶部选择一个预设。
         </p>
-        <h2> Editing </h2>
+        <h2>编辑</h2>
         <p>
-            Just edit the various fields to your liking. Some fields have a [?] next to them, you can
-            hover over that with the mouse to get some information about the field.
+            根据你的喜好在对于的项目里进行编辑，一些设置项带有 [?] 标识, 你可以把你的鼠标移动到上面，就能看到关于这个设置项的信息。
         </p>
-        <h2> Saving </h2>
+        <h2>保存</h2>
         <p>
-            Once you have edited the data to your liking, you can save it using the save button.
-            Just overwrite your existing file0 and undertale.ini.
+            只要你完成了编辑，你就可以点击“保存”来保存你所做的修改，只是覆盖了你的 file0 或 undertale.ini 文件
         </p>
-        <h2> Undoing genocide erased world / selling your soul </h2>
+        <h2>撤销屠杀线抹除世界 / 出卖你的灵魂</h2>
         <p>
-            If you erased your world, you should see a file called <code>system_information_962</code>.
+            如果你在屠杀线抹除了这个世界，在存档目录下会有一个叫 <code>system_information_962</code> 的文件。
         </p>
         <p>
-            If you sold your soul, you should also see a file called <code>system_information_963</code>.
+            如果你向 Chara 出卖了你的灵魂, 你会看到一个叫做 <code>system_information_963</code> 的文件。
         </p>
         <p>
-            Just delete these files using your file manager.
+            如果要撤销，直接删除这两个文件中的一个就好了。
         </p>
         <p>
-            If you are using the Steam version of the game, these files might be backed up and restored by
-            the game on startup.
-            In that case, you should delete the Steam data for UNDERTALE in addition to the system_ files,
-            but I have no information on how to do this.
+            如果你正在使用这个游戏的 Steam 版本, 这些文件可能会通过备份，在启动游戏的时候被还原。
+            以防万一, 除了 system_file 之外，您还应该删除 UNDERTALE 的 Steam 数据，但是抱歉，我并不了解具体该怎么做。
         </p>
+        <br>
+      </div>
     </body>
 </html>
